# turtle

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  default.nix  optparse-applicative.nix  release.nix  shell.nix  stack-lts-10.yaml  stack.yaml  turtle.cabal
.github/workflows/: haskell-ci.yml
bench/: Main.hs
examples/: restoreBackup.hs
nix/: fail.nix  fetchNixpkgs.nix  readDirectory.nix  turtle.nix
slides/: go  slides.md
src/: Turtle.hs
src/Turtle/: .Prelude.hs.swp  .Shell.hs.swp  Bytes.hs  Format.hs  Internal.hs  Line.hs  Options.hs  Parser.hs  Pattern.hs  Prelude.hs  Protected.hs  Resource.hs  Shell.hs  Tutorial.hs  Util.hs
src/Turtle/Bytes/: Lazy.hs
test/: Main.hs  RegressionBrokenPipe.hs  RegressionMaskingException.hs  cptree.hs  system-filepath.hs
