Name: turtle
Version: 1.5.24
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Turtle-Library/issues
Synopsis: Shell programming, Haskell-style
Description: @turtle@ is a reimplementation of the Unix command line environment
    in Haskell so that you can use Haskell as both a shell and a scripting
    language.
    .
    Features include:
    .
    * Batteries included: Command an extended suite of predefined utilities
    .
    * Interoperability: You can still run external shell commands
    .
    * Portability: Works on Windows, OS X, and Linux
    .
    * Exception safety: Safely acquire and release resources
    .
    * Streaming: Transform or fold command output in constant space
    .
    * Patterns: Use typed regular expressions that can parse structured values
    .
    * Formatting: Type-safe @printf@-style text formatting
    .
    * Modern: Supports @text@ and @system-filepath@
    .
    Read "Turtle.Tutorial" for a detailed tutorial or "Turtle.Prelude" for a
    quick-start guide
    .
    @turtle@ is designed to be beginner-friendly, but as a result lacks certain
    features, like tracing commands.  If you feel comfortable using @turtle@
    then you should also check out the @Shelly@ library which provides similar
    functionality.
Category: System

Tested-With:
  GHC == 9.2.1
  GHC == 9.0.1
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Extra-Source-Files:
    CHANGELOG.md

Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Turtle-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        -- 2021-09-07: Turtle.Prelude uses GHC-8.0 features, so base >= 4.9
        base                 >= 4.9     && < 5   ,
        ansi-wl-pprint       >= 0.6     && < 0.7 ,
        async                >= 2.0.0.0 && < 2.3 ,
        bytestring           >= 0.9.1.8 && < 0.12,
        clock                >= 0.4.1.2 && < 0.9 ,
        containers           >= 0.5.0.0 && < 0.7 ,
        directory            >= 1.3.1.0 && < 1.4 ,
        exceptions           >= 0.4     && < 0.11,
        foldl                >= 1.1     && < 1.5 ,
        hostname                           < 1.1 ,
        managed              >= 1.0.3   && < 1.1 ,
        process              >= 1.0.1.1 && < 1.7 ,
        system-filepath      >= 0.3.1   && < 0.5 ,
        system-fileio        >= 0.2.1   && < 0.4 ,
        stm                                < 2.6 ,
        streaming-commons                  < 0.3 ,
        temporary                          < 1.4 ,
        text                 >= 1.0.0   && < 2.1 ,
        time                               < 1.13,
        transformers         >= 0.2.0.0 && < 0.7 ,
        optparse-applicative >= 0.16    && < 0.18,
        optional-args        >= 1.0     && < 2.0 ,
        unix-compat          >= 0.4     && < 0.6
    if os(windows)
        Build-Depends: Win32 >= 2.2.0.1 && < 2.9
    else
        Build-Depends: unix  >= 2.5.1.0 && < 2.8

    Exposed-Modules:
        Turtle,
        Turtle.Bytes,
        Turtle.Format,
        Turtle.Pattern,
        Turtle.Shell,
        Turtle.Options,
        Turtle.Line,
        Turtle.Prelude,
        Turtle.Tutorial
    Other-Modules:
        Turtle.Internal
    GHC-Options: -Wall
    Default-Language: Haskell2010

test-suite tests
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: test
    Main-Is: Main.hs
    GHC-Options: -Wall
    Default-Language: Haskell2010
    Build-Depends:
        base    >= 4   && < 5   ,
        doctest >= 0.7

test-suite regression-broken-pipe
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: test
    Main-Is: RegressionBrokenPipe.hs
    GHC-Options: -Wall -threaded
    Default-Language: Haskell2010
    Build-Depends:
        base   >= 4 && < 5,
        turtle

test-suite regression-masking-exception
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: test
    Main-Is: RegressionMaskingException.hs
    GHC-Options: -Wall -threaded
    Default-Language: Haskell2010
    Build-Depends:
        base   >= 4 && < 5,
        turtle

test-suite cptree
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: test
    Main-Is: cptree.hs
    GHC-Options: -Wall -threaded
    Default-Language: Haskell2010
    Build-Depends:
        base   >= 4 && < 5,
        temporary,
        system-filepath >= 0.4,
        turtle

benchmark bench
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: bench
    Main-Is: Main.hs
    GHC-Options: -O2 -Wall -threaded
    Default-Language: Haskell2010
    Build-Depends:
        base        >= 4     && < 5  ,
        tasty-bench >= 0.3.1         ,
        text                    < 1.3,
        turtle
